# cygnus-ssh-mcp

./: .gitignore  .mcp.json  404.html  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  The definition of `file_content` in the test `test_tool__file_ops.py` uses a multiline string literal  The docstring for `SshFileOperations_Linux.find_lines_with_pattern` in `ssh_ops_file.py` already provides guidance on this  index.html  mcp_ssh_server.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  ssh_client.py  ssh_history.py  ssh_host_manager.py  ssh_hosts.example.toml  ssh_hosts.toml  ssh_models.py  ssh_ops_directory.py  ssh_ops_file.py  ssh_ops_history.py  ssh_ops_os.py  ssh_ops_run.py  ssh_ops_task.py
.claude/commands/: test-matrix.md
.github/workflows/: docs.yml  publish.yml
10-overview/: index.html
15-installation/: index.html
20-platform-compatibility/: index.html
25-windows-support/: index.html
26-alternate-platforms/: index.html
30-host-configuration/: index.html
40-tools-reference/: index.html
50-command-execution/: index.html
60-process-management/: index.html
70-logging/: index.html
80-claude-desktop/: index.html
MACOS_COMPATIBILITY/: index.html
_old_/: test_mcp_server_basics.py  test_mcp_server_tools.py  test_mcp_server_tools_2.py  tests_basic.py  xxxtest_mcp_history.py  xxxtest_mcp_run_commands.py  xxxtest_mcp_server_tools.py  xxxtest_mcp_server_tools_2.py  xxxtest_mcp_status.py
aider/: aider_start.md
doc/: claude_deploy_guide.md  host_file_doc.md  logging_guide.md  mcp_server_testing_demo.py  platform_compatibility.md  process_management.md  run_cmd_doc.md  tools_reference.md
docs/: 10-overview.md  15-installation.md  20-platform-compatibility.md  25-windows-support.md  26-alternate-platforms.md  30-host-configuration.md  40-tools-reference.md  50-command-execution.md  60-process-management.md  70-logging.md  80-claude-desktop.md  MACOS_COMPATIBILITY.md  index.md
docs_internal/: ARCHITECTURE.md  CMD-EXECUTION-MODEL.md  README.md  RELEASING.md  TEST-INFRASTRUCTURE.md
marketing/: 01-STRATEGY-OVERVIEW.md  02-SHOW-HN-POST.md  03-REDDIT-POSTS.md
planning/: file_tools_planning.md  mcp_tools_reference.md  planning__test_mcp.txt  sudo_problem.txt
search/: search_index.json
testing/: conftest.py  test_basics.py  test_directory.py  test_directory_ops.py  test_file_edits.py  test_history.py  test_host_manager.py  test_mcp_server_basics.py  test_mcp_server_tools.py  test_mcp_server_tools_2.py  test_run.py  test_tasks.py  test_utils.py  tests_basic.py
testing_matrix/: README.md  __init__.py  config.py  run_matrix.py
testing_mcp/: .env.example  README_PRODUCTION_TESTS.md  conftest.py  docker_manager.py  minimalist_test.py  run_tests.py  ssh_hosts.toml  test__runner.py  test_connection.py  test_hosts.toml  test_mcp_fixtures.py  test_mcp_run_commands.py  test_mcp_server_tools.py  test_mcp_status.py  test_tool__archive_sudo.py  test_tool__bugfix_windows.py  test_tool__dir_sudo.py  test_tool__dir_transfer.py  test_tool__directory_ops.py  test_tool__file_line_replace.py  test_tool__file_ops.py  test_tool__file_ops_2.py  test_tool__file_unicode.py  test_tool__history.py  test_tool__hosts.py  test_tool__run.py  test_tool__status.py  test_tool__sudo.py  test_tool__sudo_comprehensive.py  test_tool__sudo_production.py  test_tool__system.py  test_tool__task.py  test_tool__task_sudo.py  test_tool__tasks.py  test_unit_capability_gate.py  test_unit_flex_bash_fallback.py  test_unit_handle_sudo_bash_fallback.py  test_unit_os_detection_diagnostics.py  test_unit_output_chunking.py
testing_win/: conftest.py  test_connection.py  test_dir_ops.py  test_file_ops.py
(+16 files in other folders)
